--- a/pom.xml
+++ b/pom.xml
@@ -1,222 +1,72 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
+	<parent>
+		<groupId>org.jboss.pressgang</groupId>
+		<artifactId>pressgang-parent</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+	
 	<groupId>org.jboss.pressgang.ccms</groupId>
 	<artifactId>pressgang-ccms-rest</artifactId>
 	<version>1.0-SNAPSHOT</version>
-  
 	<name>PressGang CCMS REST Common</name>
 	<url>https://community.jboss.org/en/pressgang</url>
 
-	<!-- START OF SONATYPE REQUIREMENTS -->
-
-	<developers>
-		<developer>
-			<id>mcasperson</id>
-			<name>Matthew Casperson</name>
-			<email>mcaspers@redhat.com</email>
-		</developer>
-		<developer>
-			<id>lnewson</id>
-			<name>Lee Newson</name>
-			<email>lnewson@redhat.com</email>
-		</developer>
-		<developer>
-			<id>codemiller</id>
-			<name>Katie Miller</name>
-			<email>kamiller@redhat.com</email>
-		</developer>
-	</developers>
-	<licenses>
-		<license>
-			<name>LGPL 2.1 license</name>
-			<url>http://www.opensource.org/licenses/lgpl-2.1.php</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
 	<scm>
-		<url>https://github.com/mcasperson/PressGangCCMSRESTv1Common</url>
-		<connection>scm:git@github.com:mcasperson/PressGangCCMSRESTv1Common.git</connection>
-		<developerConnection>scm:git@github.com:mcasperson/PressGangCCMSRESTv1Common.git</developerConnection>
+		<url>https://github.com/lnewson/PressGangCCMSRESTCommon</url>
+		<connection>scm:git@github.com:lnewson/PressGangCCMSRESTCommon.git</connection>
+		<developerConnection>scm:git@github.com:lnewson/PressGangCCMSRESTCommon.git</developerConnection>
 	</scm>
 
-	<parent>
-		<groupId>org.sonatype.oss</groupId>
-		<artifactId>oss-parent</artifactId>
-		<version>7</version>
-	</parent>
-
-	<!-- https://docs.sonatype.org/display/Repository/How+To+Generate+PGP+Signatures+With+Maven#HowToGeneratePGPSignaturesWithMaven-MavenGPGPlugin -->
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<configuration>
-		        	<archive>
-		            	<manifest>
-		              		<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-		              		<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-		            	</manifest>
-		          	</archive>
-		        </configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-gpg-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>sign-artifacts</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>sign</goal>
-						</goals>
-						<configuration>
-							<keyname>62B72888</keyname>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- http://maven.apache.org/plugin-developers/cookbook/attach-source-javadoc-artifacts.html -->
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>gwt-maven-plugin</artifactId>
-				<version>2.5.0-rc1</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>resources</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-
-		<pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											org.codehaus.mojo
-										</groupId>
-										<artifactId>
-											gwt-maven-plugin
-										</artifactId>
-										<versionRange>
-											[2.5.0-rc1,)
-										</versionRange>
-										<goals>
-											<goal>resources</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
-
-	<repositories>
-		<repository>
-			<id>SonatypeSnapshotRepository</id>
-			<name>Sonatype Snapshot Repository</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-			<layout>default</layout>
-		</repository>
-	</repositories>
-
-	<!-- END OF SONATYPE REQUIREMENTS -->
-
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jackson.version>1.9.8</jackson.version>
+		<resteasy.version>2.3.4.Final</resteasy.version>
+		<mockito.version>1.9.0</mockito.version>
 	</properties>
 
 	<dependencies>
-
+		<!-- Testing Libraries -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.10</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>1.9.0</version>
+			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
 		
+		<!-- RESTEasy Libraries -->
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
-			<version>2.3.4.Final</version>
-			<scope>provided</scope>
+			<version>${resteasy.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-atom-provider</artifactId>
-			<version>2.3.4.Final</version>
-			<scope>provided</scope>
+			<version>${resteasy.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jackson-provider</artifactId>
+			<version>${resteasy.version}</version>
+		</dependency>
+		
+		<!-- Jackson Libraries -->
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.9.6</version>
-			<scope>provided</scope>
+			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-core-asl</artifactId>
-			<version>1.9.6</version>
-			<scope>provided</scope>
+			<version>${jackson.version}</version>
 		</dependency>
 	</dependencies>
 </project>
