Updated the POM to use the version numbers agreed upon.

--- a/pom.xml
+++ b/pom.xml
@@ -1,107 +1,107 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	
-	<parent>
-		<groupId>org.jboss.pressgang</groupId>
-		<artifactId>pressgang-parent</artifactId>
-		<version>1.4</version>
-	</parent>
-	
-	<groupId>org.jboss.pressgang.ccms</groupId>
-	<artifactId>pressgang-ccms-rest</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<name>PressGang CCMS REST Common</name>
-	<url>https://community.jboss.org/en/pressgang</url>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<scm>
-		<url>https://github.com/lnewson/PressGangCCMSRESTCommon</url>
-		<connection>scm:git@github.com:lnewson/PressGangCCMSRESTCommon.git</connection>
-		<developerConnection>scm:git@github.com:lnewson/PressGangCCMSRESTCommon.git</developerConnection>
-	</scm>
+    <parent>
+        <groupId>org.jboss.pressgang.ccms</groupId>
+        <artifactId>pressgang-ccms-parent</artifactId>
+        <version>1.1-SNAPSHOT</version>
+    </parent>
 
-	<properties>
-		<jackson.version>1.9.8</jackson.version>
-		<resteasy.version>2.3.4.Final</resteasy.version>
-		<mockito.version>1.9.0</mockito.version>
-	</properties>
+    <groupId>org.jboss.pressgang.ccms</groupId>
+    <artifactId>pressgang-ccms-rest</artifactId>
+    <name>PressGang CCMS REST Common</name>
+    <url>https://community.jboss.org/en/pressgang</url>
 
-	<dependencies>
-		<!-- Testing Libraries -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<version>${mockito.version}</version>
-			<scope>test</scope>
-		</dependency>
-		
-		<!-- RESTEasy Libraries -->
-		<dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-jaxrs</artifactId>
-			<version>${resteasy.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-atom-provider</artifactId>
-			<version>${resteasy.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.resteasy</groupId>
-			<artifactId>resteasy-jackson-provider</artifactId>
-			<version>${resteasy.version}</version>
-		</dependency>
-		
-		<!-- Jackson Libraries -->
-		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>${jackson.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-core-asl</artifactId>
-			<version>${jackson.version}</version>
-		</dependency>
-	</dependencies>
-	<build>
-	    <pluginManagement>
-	        <plugins>
-	            <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-	            <plugin>
-	                <groupId>org.eclipse.m2e</groupId>
-	                <artifactId>lifecycle-mapping</artifactId>
-	                <version>1.0.0</version>
-	                <configuration>
-	                    <lifecycleMappingMetadata>
-	                        <pluginExecutions>
-	                            <pluginExecution>
-	                                <pluginExecutionFilter>
-	                                    <groupId>org.jacoco</groupId>
-	                                    <artifactId>
-	                                        jacoco-maven-plugin
-	                                    </artifactId>
-	                                    <versionRange>
-	                                        [${jacoco.version},)
-	                                    </versionRange>
-	                                    <goals>
-	                                        <goal>prepare-agent</goal>
-	                                    </goals>
-	                                </pluginExecutionFilter>
-	                                <action>
-	                                    <ignore></ignore>
-	                                </action>
-	                            </pluginExecution>
-	                        </pluginExecutions>
-	                    </lifecycleMappingMetadata>
-	                </configuration>
-	            </plugin>
-	        </plugins>
-	    </pluginManagement>
-	</build>
+    <scm>
+        <url>https://github.com/pressgang-ccms/PressGangCCMSRESTCommon</url>
+        <connection>scm:git@github.com:pressgang-ccms/PressGangCCMSRESTCommon.git</connection>
+        <developerConnection>scm:git@github.com:pressgang-ccms/PressGangCCMSRESTCommon.git</developerConnection>
+    </scm>
+
+    <properties>
+        <jackson.version>1.9.8</jackson.version>
+        <resteasy.version>2.3.4.Final</resteasy.version>
+        <mockito.version>1.9.0</mockito.version>
+    </properties>
+
+    <dependencies>
+        <!-- Testing Libraries -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- RESTEasy Libraries -->
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxrs</artifactId>
+            <version>${resteasy.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-atom-provider</artifactId>
+            <version>${resteasy.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jackson-provider</artifactId>
+            <version>${resteasy.version}</version>
+        </dependency>
+
+        <!-- Jackson Libraries -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+    </dependencies>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                    <configuration>
+                        <lifecycleMappingMetadata>
+                            <pluginExecutions>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>org.jacoco</groupId>
+                                        <artifactId>
+                                            jacoco-maven-plugin
+                                        </artifactId>
+                                        <versionRange>
+                                            [${jacoco.version},)
+                                        </versionRange>
+                                        <goals>
+                                            <goal>prepare-agent</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore></ignore>
+                                    </action>
+                                </pluginExecution>
+                            </pluginExecutions>
+                        </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
