--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.jboss.pressgang.ccms</groupId>
-        <artifactId>pressgang-ccms-parent</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <groupId>org.jboss.pressgang</groupId>
+        <artifactId>pressgang-parent</artifactId>
+        <version>1.5</version>
     </parent>
 
     <groupId>org.jboss.pressgang.ccms</groupId>
     <artifactId>pressgang-ccms-rest</artifactId>
+    <version>1.1-SNAPSHOT</version>
+
     <name>PressGang CCMS REST Common</name>
     <url>https://community.jboss.org/en/pressgang</url>
 
@@ -26,20 +28,6 @@
     </properties>
 
     <dependencies>
-        <!-- Testing Libraries -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>${mockito.version}</version>
-            <scope>test</scope>
-        </dependency>
-
         <!-- RESTEasy Libraries -->
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
@@ -67,6 +55,20 @@
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-core-asl</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+
+        <!-- Testing Libraries -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
